--- a/site/index.html
+++ b/site/index.html
@@ -7,5 +7,6 @@
 <body>
 <div id="root"></div>
 <script type="module" src="./main.tsx"></script>
+<script src="//at.alicdn.com/t/font_178634_7m8rip6osz4.js"></script>
 </body>
 </html>
