--- a/site/index.html
+++ b/site/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div id="root"></div>
-<script type="module" src="./main.tsx"></script>
-<script src="//at.alicdn.com/t/c/font_178634_ddmq2oir55b.js"></script>
+<script src="./main.tsx" type="module"></script>
+<script src="//at.alicdn.com/t/c/font_178634_m6cwt8bb21e.js"></script>
 </body>
 </html>
