feat: styled-components

--- a/site/index.html
+++ b/site/index.html
@@ -7,6 +7,7 @@
       name="viewport"
     />
     <title>Components Preview Site</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap" />
   </head>
   <body>
     <div id="root"></div>
